# auxv-dot-org

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  auxv-dot-org.service  deploy.sh  deploy_on_push.sh  justfile  template.html
assets/font/: cascadia_code.css
assets/templates/: template.css  template.html  template.js
frontend/: about.md  index.md  template.css  template.html
frontend/algorithms/unobstructed_subrectangles/: index.md
frontend/font/: cascadia_code.css
markdown/: about.md  index.md
pages/: 404.md  about.md  index.md  robots.txt
pages/algorithms/: unobstructed_subrectangles.md  unobstructed_sweep_line.md
pages/font/: cascadia_code.css
pages/highlight_js/: rose-pine.css
pages/highlight_js/langs/: kconfig.js
pages/projects/auxv-dot-org/: lets_encrypt_acme.md
pages/projects/dianac/: bitwise_logic_and_my_compiler.md  diana_compiled_language_specification.md
pages/projects/franxx/: how_not_to_build_a_keyboard.md  index.md
pages/projects/franxx/diagrams/: picture_ground_barnacle.jpeg~
pages/projects/miros/: chapter_1.md  frankensteins_monster.md  slayer_of_dragons_eater_of_bugs.md  the_three_musketeers.md  where_to__start.md
pages/random_crap/: ttwhy.md
pages/templates/: emoji_copy_paste.js  search-overlay.css  search-overlay.js  template.css  template.html  template.js
src/: api.rs  emojis.rs  error.rs  html.rs  lets_encrypt_listener.rs  lib.rs  main.rs  markdown.rs  pages.rs  render.rs  search.rs  state.rs  template.rs
static/images/: profile_picture
tests/: link_integrity.rs
