[package]
name = "auxv-dot-org"
version = "0.2.0"
edition = "2024"

[dependencies]
either = "1.13.0"
log = "0.4.25"
pulldown-cmark = "0.12.2"
rocket = { git = "https://github.com/rwf2/Rocket.git", features = [
  "json",
  "tls",
] }
twemoji = { git = "https://github.com/5-pebbles/twemoji.git", version = "0.1.0" }
rustls-acme = { version = "0.12.1", features = ["ring", "tokio"] }
tokio-rustls = { version = "0.26.1" }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio = { version = "1.43.0", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
clap = { version = "4.5.27", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
